[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.6",
    "loguru>=0.7.3",
    "pydantic-ai>=0.0.19",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "python-levenshtein>=0.26.1",
    "sqlalchemy>=2.0.37",
    "thefuzz>=0.22.1",
    "uvicorn>=0.34.0",
]
